# CppCallback

./: .clang-format  CMakeLists.txt
src/: CMakeLists.txt  callback.hpp  main.cpp
